KUKA_ParseModuleFileCSharp/KUKA_ParseModuleFile/ANTLR/kukaParser.java
// Generated from C:\Users\lholetzke\Documents\Visual Studio 2012\Projects\KUKA_ParseModuleFileCSharp\KUKA_ParseModuleFile\ANTLR\kuka.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class kukaParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, FILEATTRIBUTES=2, NEWLINE=3, DEFDAT=4, ENDDAT=5, DECL=6, GLOBAL=7, 
		PUBLIC=8, EXT=9, IN=10, OUT=11, SIGNAL=12, TO=13, ENUMD=14, STRUCD=15, 
		XCONST=16, ASSIGMENT=17, RBracketOpen=18, RBracketClose=19, BracketOpen=20, 
		BracketClose=21, BraceOpen=22, BraceClose=23, COMMA=24, COLON=25, WS=26, 
		BOOL=27, ID=28, ENUM=29, INT=30, FLOAT=31, BITArr=32, STRING=33;
	public static final String[] tokenNames = {
		"<INVALID>", "COMMENT", "FILEATTRIBUTES", "NEWLINE", "'DEFDAT'", "'ENDDAT'", 
		"'DECL'", "'GLOBAL'", "'PUBLIC'", "'EXT'", "'IN'", "'OUT'", "'SIGNAL'", 
		"'TO'", "'ENUM'", "'STRUC'", "'CONST'", "'='", "'('", "')'", "'['", "']'", 
		"'{'", "'}'", "','", "':'", "WS", "BOOL", "ID", "ENUM", "INT", "FLOAT", 
		"BITArr", "STRING"
	};
	public static final int
		RULE_prog = 0, RULE_defdat = 1, RULE_line = 2, RULE_data = 3, RULE_noDecl = 4, 
		RULE_assign = 5, RULE_decl = 6, RULE_xconst = 7, RULE_ext = 8, RULE_signal = 9, 
		RULE_myenum = 10, RULE_mystruc = 11, RULE_structure = 12, RULE_parameterList = 13, 
		RULE_params = 14, RULE_sparamList = 15, RULE_parameters = 16, RULE_signalRange = 17, 
		RULE_array = 18, RULE_idList = 19, RULE_value = 20;
	public static final String[] ruleNames = {
		"prog", "defdat", "line", "data", "noDecl", "assign", "decl", "xconst", 
		"ext", "signal", "myenum", "mystruc", "structure", "parameterList", "params", 
		"sparamList", "parameters", "signalRange", "array", "idList", "value"
	};

	@Override
	public String getGrammarFileName() { return "kuka.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public kukaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(kukaParser.NEWLINE); }
		public TerminalNode EOF() { return getToken(kukaParser.EOF, 0); }
		public DefdatContext defdat() {
			return getRuleContext(DefdatContext.class,0);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public TerminalNode NEWLINE(int i) {
			return getToken(kukaParser.NEWLINE, i);
		}
		public TerminalNode COMMENT(int i) {
			return getToken(kukaParser.COMMENT, i);
		}
		public TerminalNode FILEATTRIBUTES(int i) {
			return getToken(kukaParser.FILEATTRIBUTES, i);
		}
		public List<TerminalNode> FILEATTRIBUTES() { return getTokens(kukaParser.FILEATTRIBUTES); }
		public List<TerminalNode> COMMENT() { return getTokens(kukaParser.COMMENT); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public TerminalNode ENDDAT() { return getToken(kukaParser.ENDDAT, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FILEATTRIBUTES) {
				{
				{
				setState(42); match(FILEATTRIBUTES);
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48); defdat();
			setState(49); match(NEWLINE);
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT) | (1L << NEWLINE) | (1L << DECL) | (1L << GLOBAL) | (1L << EXT) | (1L << SIGNAL) | (1L << ENUMD) | (1L << STRUCD) | (1L << XCONST) | (1L << ID))) != 0)) {
				{
				{
				setState(50); line();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56); match(ENDDAT);
			setState(58);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(57); match(COMMENT);
				}
				break;
			}
			setState(61);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(60); match(NEWLINE);
				}
				break;
			}
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT || _la==NEWLINE) {
				{
				{
				setState(64);
				_la = _input.LA(1);
				if (_la==COMMENT) {
					{
					setState(63); match(COMMENT);
					}
				}

				setState(66); match(NEWLINE);
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefdatContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(kukaParser.PUBLIC, 0); }
		public TerminalNode DEFDAT() { return getToken(kukaParser.DEFDAT, 0); }
		public TerminalNode ID() { return getToken(kukaParser.ID, 0); }
		public DefdatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defdat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).enterDefdat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).exitDefdat(this);
		}
	}

	public final DefdatContext defdat() throws RecognitionException {
		DefdatContext _localctx = new DefdatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_defdat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74); match(DEFDAT);
			setState(75); match(ID);
			setState(77);
			_la = _input.LA(1);
			if (_la==PUBLIC) {
				{
				setState(76); match(PUBLIC);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(kukaParser.NEWLINE, 0); }
		public TerminalNode COMMENT(int i) {
			return getToken(kukaParser.COMMENT, i);
		}
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public List<TerminalNode> COMMENT() { return getTokens(kukaParser.COMMENT); }
		public MystrucContext mystruc() {
			return getRuleContext(MystrucContext.class,0);
		}
		public MyenumContext myenum() {
			return getRuleContext(MyenumContext.class,0);
		}
		public SignalContext signal() {
			return getRuleContext(SignalContext.class,0);
		}
		public ExtContext ext() {
			return getRuleContext(ExtContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).exitLine(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(80);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(79); match(COMMENT);
					}
					break;
				}
				}
				break;

			case 2:
				{
				setState(82); data();
				}
				break;

			case 3:
				{
				setState(83); myenum();
				}
				break;

			case 4:
				{
				setState(84); mystruc();
				}
				break;

			case 5:
				{
				setState(85); signal();
				}
				break;

			case 6:
				{
				setState(86); ext();
				}
				break;
			}
			setState(90);
			_la = _input.LA(1);
			if (_la==COMMENT) {
				{
				setState(89); match(COMMENT);
				}
			}

			setState(92); match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public XconstContext xconst() {
			return getRuleContext(XconstContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public NoDeclContext noDecl() {
			return getRuleContext(NoDeclContext.class,0);
		}
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).enterData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).exitData(this);
		}
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_data);
		try {
			setState(98);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94); noDecl();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95); assign();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(96); decl();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(97); xconst();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NoDeclContext extends ParserRuleContext {
		public TerminalNode GLOBAL() { return getToken(kukaParser.GLOBAL, 0); }
		public List<TerminalNode> COMMA() { return getTokens(kukaParser.COMMA); }
		public List<AssignContext> assign() {
			return getRuleContexts(AssignContext.class);
		}
		public TerminalNode ID() { return getToken(kukaParser.ID, 0); }
		public AssignContext assign(int i) {
			return getRuleContext(AssignContext.class,i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(kukaParser.COMMA, i);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public NoDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_noDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).enterNoDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).exitNoDecl(this);
		}
	}

	public final NoDeclContext noDecl() throws RecognitionException {
		NoDeclContext _localctx = new NoDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_noDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_la = _input.LA(1);
			if (_la==GLOBAL) {
				{
				setState(100); match(GLOBAL);
				}
			}

			setState(103); match(ID);
			setState(105);
			_la = _input.LA(1);
			if (_la==BracketOpen) {
				{
				setState(104); array();
				}
			}

			setState(107); assign();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(108); match(COMMA);
				setState(110);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(109); assign();
					}
				}

				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode ID() { return getToken(kukaParser.ID, 0); }
		public TerminalNode ASSIGMENT() { return getToken(kukaParser.ASSIGMENT, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(ID);
			setState(119);
			_la = _input.LA(1);
			if (_la==BracketOpen) {
				{
				setState(118); array();
				}
			}

			setState(123);
			_la = _input.LA(1);
			if (_la==ASSIGMENT) {
				{
				setState(121); match(ASSIGMENT);
				setState(122); value();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public TerminalNode DECL() { return getToken(kukaParser.DECL, 0); }
		public List<TerminalNode> GLOBAL() { return getTokens(kukaParser.GLOBAL); }
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public TerminalNode ID() { return getToken(kukaParser.ID, 0); }
		public TerminalNode GLOBAL(int i) {
			return getToken(kukaParser.GLOBAL, i);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).exitDecl(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_la = _input.LA(1);
			if (_la==GLOBAL) {
				{
				setState(125); match(GLOBAL);
				}
			}

			setState(128); match(DECL);
			setState(130);
			_la = _input.LA(1);
			if (_la==GLOBAL) {
				{
				setState(129); match(GLOBAL);
				}
			}

			setState(132); match(ID);
			setState(133); assign();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class XconstContext extends ParserRuleContext {
		public TerminalNode XCONST() { return getToken(kukaParser.XCONST, 0); }
		public TerminalNode GLOBAL() { return getToken(kukaParser.GLOBAL, 0); }
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public TerminalNode ID() { return getToken(kukaParser.ID, 0); }
		public XconstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xconst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).enterXconst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).exitXconst(this);
		}
	}

	public final XconstContext xconst() throws RecognitionException {
		XconstContext _localctx = new XconstContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_xconst);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_la = _input.LA(1);
			if (_la==GLOBAL) {
				{
				setState(135); match(GLOBAL);
				}
			}

			setState(138); match(XCONST);
			setState(139); match(ID);
			setState(140); assign();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExtContext extends ParserRuleContext {
		public TerminalNode EXT() { return getToken(kukaParser.EXT, 0); }
		public TerminalNode ID() { return getToken(kukaParser.ID, 0); }
		public TerminalNode RBracketOpen() { return getToken(kukaParser.RBracketOpen, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode RBracketClose() { return getToken(kukaParser.RBracketClose, 0); }
		public ExtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ext; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).enterExt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).exitExt(this);
		}
	}

	public final ExtContext ext() throws RecognitionException {
		ExtContext _localctx = new ExtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ext);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); match(EXT);
			setState(143); match(ID);
			setState(144); match(RBracketOpen);
			setState(146);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(145); parameterList();
				}
			}

			setState(148); match(RBracketClose);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignalContext extends ParserRuleContext {
		public TerminalNode GLOBAL() { return getToken(kukaParser.GLOBAL, 0); }
		public TerminalNode ID() { return getToken(kukaParser.ID, 0); }
		public TerminalNode SIGNAL() { return getToken(kukaParser.SIGNAL, 0); }
		public SignalRangeContext signalRange() {
			return getRuleContext(SignalRangeContext.class,0);
		}
		public SignalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).enterSignal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).exitSignal(this);
		}
	}

	public final SignalContext signal() throws RecognitionException {
		SignalContext _localctx = new SignalContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_signal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_la = _input.LA(1);
			if (_la==GLOBAL) {
				{
				setState(150); match(GLOBAL);
				}
			}

			setState(153); match(SIGNAL);
			setState(154); match(ID);
			setState(155); signalRange();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MyenumContext extends ParserRuleContext {
		public TerminalNode GLOBAL() { return getToken(kukaParser.GLOBAL, 0); }
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public TerminalNode ID() { return getToken(kukaParser.ID, 0); }
		public TerminalNode ENUMD() { return getToken(kukaParser.ENUMD, 0); }
		public MyenumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_myenum; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).enterMyenum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).exitMyenum(this);
		}
	}

	public final MyenumContext myenum() throws RecognitionException {
		MyenumContext _localctx = new MyenumContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_myenum);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_la = _input.LA(1);
			if (_la==GLOBAL) {
				{
				setState(157); match(GLOBAL);
				}
			}

			setState(160); match(ENUMD);
			setState(161); match(ID);
			setState(162); idList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MystrucContext extends ParserRuleContext {
		public TerminalNode GLOBAL() { return getToken(kukaParser.GLOBAL, 0); }
		public TerminalNode ID() { return getToken(kukaParser.ID, 0); }
		public TerminalNode STRUCD() { return getToken(kukaParser.STRUCD, 0); }
		public SparamListContext sparamList() {
			return getRuleContext(SparamListContext.class,0);
		}
		public MystrucContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mystruc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).enterMystruc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).exitMystruc(this);
		}
	}

	public final MystrucContext mystruc() throws RecognitionException {
		MystrucContext _localctx = new MystrucContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_mystruc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_la = _input.LA(1);
			if (_la==GLOBAL) {
				{
				setState(164); match(GLOBAL);
				}
			}

			setState(167); match(STRUCD);
			setState(168); match(ID);
			setState(169); sparamList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructureContext extends ParserRuleContext {
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ArrayContext array(int i) {
			return getRuleContext(ArrayContext.class,i);
		}
		public TerminalNode BraceOpen() { return getToken(kukaParser.BraceOpen, 0); }
		public List<TerminalNode> COMMA() { return getTokens(kukaParser.COMMA); }
		public List<TerminalNode> ID() { return getTokens(kukaParser.ID); }
		public TerminalNode BraceClose() { return getToken(kukaParser.BraceClose, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(kukaParser.COMMA, i);
		}
		public List<ArrayContext> array() {
			return getRuleContexts(ArrayContext.class);
		}
		public TerminalNode ID(int i) {
			return getToken(kukaParser.ID, i);
		}
		public StructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).enterStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).exitStructure(this);
		}
	}

	public final StructureContext structure() throws RecognitionException {
		StructureContext _localctx = new StructureContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_structure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171); match(BraceOpen);
			setState(172); match(ID);
			setState(174);
			_la = _input.LA(1);
			if (_la==BracketOpen) {
				{
				setState(173); array();
				}
			}

			setState(176); value();
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(177); match(COMMA);
				setState(178); match(ID);
				setState(180);
				_la = _input.LA(1);
				if (_la==BracketOpen) {
					{
					setState(179); array();
					}
				}

				setState(182); value();
				}
				}
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(188); match(BraceClose);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterListContext extends ParserRuleContext {
		public List<TerminalNode> COMMA() { return getTokens(kukaParser.COMMA); }
		public ParametersContext parameters(int i) {
			return getRuleContext(ParametersContext.class,i);
		}
		public List<ParametersContext> parameters() {
			return getRuleContexts(ParametersContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(kukaParser.COMMA, i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).enterParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kukaListener ) ((kukaListener)listener).exitParameterList(this);
		}
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_parameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190); parameters();
			setState(195);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(191); match(COMMA);
				setState(192); parameters();
				}
				}
				setState(197);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
